--- a/index.html
+++ b/index.html
@@ -25,28 +25,49 @@
 </div>
 
 <script>
-  const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzY0CuQFdIBOopTEKOlWyjKlCIJ5N0v4ifoZiU_wpaKUOcuFgY5oUO0WvXy5L0FuQbP6A/exec";
+const BACKEND_URL = "https://script.google.com/macros/s/AKfycbzY0CuQFdIBOopTEKOlWyjKlCIJ5N0v4ifoZiU_wpaKUOcuFgY5oUO0WvXy5L0FuQbP6A/exec";
 
-  function submitForm() {
-    const formData = new FormData();
+let employee = {};
 
-    formData.append("name", document.getElementById("name").value);
-    formData.append("email", document.getElementById("email").value);
-    formData.append("role", document.getElementById("role").value);
-    formData.append("status", "Started");
+function submitForm() {
+  employee.name = document.getElementById("name").value;
+  employee.email = document.getElementById("email").value;
+  employee.role = document.getElementById("role").value;
 
-    fetch(SCRIPT_URL, {
-      method: "POST",
-      body: formData
+  fetch(BACKEND_URL, {
+    method: "POST",
+    body: JSON.stringify({
+      name: employee.name,
+      email: employee.email,
+      role: employee.role,
+      status: "Form Submitted"
     })
-    .then(() => {
-      alert("Onboarding started successfully ✅");
-    })
-    .catch(err => {
-      alert("Error submitting form ❌");
-      console.error(err);
-    });
-  }
+  }).then(() => {
+    document.getElementById("formSection").style.display = "none";
+    document.getElementById("aiSection").style.display = "block";
+    startAIVoice();
+  });
+}
+
+// ==========================
+// AI VOICE (TEXT TO SPEECH)
+// ==========================
+function speak(text) {
+  const msg = new SpeechSynthesisUtterance(text);
+  msg.lang = "en-IN";
+  msg.rate = 1;
+  msg.pitch = 1;
+  window.speechSynthesis.speak(msg);
+}
+
+function startAIVoice() {
+  const greeting = `Hello ${employee.name}. 
+  Welcome to our company.
+  I am your virtual onboarding assistant.
+  Let us begin your onboarding session.`;
+
+  speak(greeting);
+}
 </script>
 
 </body>
