--- a/index.html
+++ b/index.html
@@ -3,116 +3,134 @@
 <head>
   <title>AI Onboarding</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: Arial; background:#f4f6f8; padding:20px; }
+    .card {
+      max-width: 560px; margin:auto; background:#fff;
+      padding:25px; border-radius:10px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.1);
+    }
+    input, button {
+      width:100%; padding:12px; margin-top:10px; font-size:16px;
+    }
+    button { background:#007bff; color:#fff; border:none; border-radius:6px; }
+    button:disabled { background:#999; }
+    #aiText { margin-top:15px; font-style:italic; }
+  </style>
 </head>
 
 <body>
+<div class="card">
 
-<!-- FORM SECTION -->
-<div id="formSection">
-  <h2>Welcome</h2>
+  <div id="formSection">
+    <h2>Welcome to USDC</h2>
+    <input id="name" placeholder="Your Name">
+    <input id="email" placeholder="Email ID">
+    <input id="role" placeholder="Role / Department">
+    <button id="startBtn" onclick="startOnboarding()">Start Onboarding</button>
+    <p id="status"></p>
+  </div>
 
-  <input id="name" placeholder="Your Name"><br><br>
-  <input id="email" placeholder="Email ID"><br><br>
-  <input id="role" placeholder="Role / Department"><br><br>
+  <div id="aiSection" style="display:none;">
+    <h3>AI Onboarding Session</h3>
+    <p id="aiText">Connecting…</p>
+  </div>
 
-  <button onclick="submitForm()">Start Onboarding</button>
-</div>
-
-<!-- AI SECTION -->
-<div id="aiSection" style="display:none;">
-  <h2>AI Onboarding Session</h2>
-  <p>Connecting to your AI trainer...</p>
-  <p id="heardText" style="font-style:italic;"></p>
 </div>
 
 <script>
-/* ===============================
-   CONFIG
-================================ */
-const BACKEND_URL = "https://script.google.com/macros/s/AKfycbzY0CuQFdIBOopTEKOlWyjKlCIJ5N0v4ifoZiU_wpaKUOcuFgY5oUO0WvXy5L0FuQbP6A/exec";
+const BACKEND_URL = "PASTE_YOUR_WEB_APP_URL_HERE";
 
-let employee = {};
+let employeeName = "";
+let step = 0;
 let recognition;
 
-/* ===============================
-   FORM SUBMIT
-================================ */
-function submitForm() {
-  employee.name = document.getElementById("name").value;
-  employee.email = document.getElementById("email").value;
-  employee.role = document.getElementById("role").value;
+/* ================== ALL POLICIES SCRIPT ================== */
+const onboardingSteps = [
 
-  const formData = new FormData();
-  formData.append("name", employee.name);
-  formData.append("email", employee.email);
-  formData.append("role", employee.role);
-  formData.append("status", "Form Submitted");
+"Welcome to USDC. I am your virtual onboarding assistant. You may ask questions at any time during this session.",
+
+"USDC is a global organization delivering professional services across multiple industries. We focus on quality, innovation, and long-term partnerships.",
+
+"Our vision is to build sustainable value for clients and employees. Our mission is to deliver excellence through integrity, collaboration, and continuous improvement.",
+
+"USDC has a global presence with teams serving clients across different regions and industries.",
+
+"At USDC, we promote a respectful and professional work culture. Teamwork, accountability, ethical conduct, and mutual respect are expected from all employees.",
+
+"Our regular working hours are as per company policy. Employees are expected to maintain punctuality and regular attendance.",
+
+"Attendance is mandatory. Any deviation or irregular attendance should be informed and approved by reporting managers.",
+
+"USDC provides various types of leave as per company policy. Leave requests should be applied in advance through the HR system.",
+
+"Employee benefits include insurance and other statutory benefits as applicable. Detailed benefit information will be shared by HR.",
+
+"All employees must complete mandatory onboarding and training programs. Continuous learning is encouraged at USDC.",
+
+"Employees will be under probation for the defined period. Performance reviews are conducted as per company guidelines.",
+
+"Salary structure includes applicable components and statutory deductions. Exact salary details are as per your offer letter and payslip.",
+
+"USDC uses HR systems to manage attendance, leave, and employee information. Employees are expected to use these systems responsibly.",
+
+"Employees are required to comply with company policies, sign necessary documents, and follow all statutory and internal guidelines.",
+
+"For any HR-related queries or support, employees may contact the HR team through official communication channels.",
+
+"This concludes your onboarding session. We welcome you to USDC and wish you a successful journey with us."
+];
+
+/* ================== START ================== */
+function startOnboarding() {
+  employeeName = name.value;
+  if (!employeeName || !email.value || !role.value) {
+    alert("Please fill all details"); return;
+  }
+
+  startBtn.disabled = true;
+  status.innerText = "Starting onboarding…";
 
   fetch(BACKEND_URL, {
     method: "POST",
-    body: formData
-  })
-  .then(() => {
-    document.getElementById("formSection").style.display = "none";
-    document.getElementById("aiSection").style.display = "block";
-    startAIVoice();
-  })
-  .catch(err => {
-    alert("Backend error");
-    console.error(err);
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: `name=${employeeName}&email=${email.value}&role=${role.value}&status=Started`
+  }).then(() => {
+    formSection.style.display = "none";
+    aiSection.style.display = "block";
+    speak(`Hello ${employeeName}. How are you feeling today?`, true);
   });
 }
 
-/* ===============================
-   AI SPEAK (SAFE VERSION)
-================================ */
-function speak(text, callback) {
-  window.speechSynthesis.cancel(); // stop any previous speech
-
-  const msg = new SpeechSynthesisUtterance(text);
-  msg.lang = "en-IN";
-  msg.rate = 0.95;
-  msg.pitch = 1;
-
-  msg.onend = function () {
-    if (callback) callback();
-  };
-
-  window.speechSynthesis.speak(msg);
+/* ================== SPEAK ================== */
+function speak(text, listenAfter=false) {
+  const u = new SpeechSynthesisUtterance(text);
+  const v = speechSynthesis.getVoices();
+  u.voice = v.find(x => x.lang==="en-IN") || v[0];
+  u.rate = 0.85; u.pitch = 1; u.volume = 1;
+  aiText.innerText = text;
+  u.onend = () => listenAfter && setTimeout(startListening, 1500);
+  speechSynthesis.speak(u);
 }
 
-function startAIVoice() {
-  const greeting = `Hello ${employee.name}.
-  Welcome to our company.
-  I am your virtual onboarding assistant.
-  How are you feeling today?`;
-
-  speak(greeting, startListening);
-}
-
-/* ===============================
-   MIC LISTENING
-================================ */
+/* ================== LISTEN ================== */
 function startListening() {
-  recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+  recognition = new webkitSpeechRecognition();
   recognition.lang = "en-IN";
-  recognition.interimResults = false;
-  recognition.maxAlternatives = 1;
-
-  recognition.onresult = function(event) {
-    const spokenText = event.results[0][0].transcript;
-
-    document.getElementById("heardText").innerText =
-      "You said: " + spokenText;
-
-    speak("Thank you for sharing. I heard you say " + spokenText);
-  };
-
-  recognition.onerror = function() {
-    speak("Sorry, I could not hear you clearly. Please try again.");
-  };
-
+  recognition.onstart = () => aiText.innerText = "Listening…";
+  recognition.onresult = () => setTimeout(nextStep, 1200);
+  recognition.onerror = nextStep;
   recognition.start();
+}
+
+/* ================== FLOW ================== */
+function nextStep() {
+  if (step < onboardingSteps.length) {
+    speak(onboardingSteps[step] + " You may ask questions if you have any.", true);
+    step++;
+  } else {
+    speak("Onboarding is complete. Thank you.");
+  }
 }
 </script>
 
