--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <script>
-const BACKEND_URL = "PASTE_YOUR_WEB_APP_URL_HERE";
+const BACKEND_URL = "https://script.google.com/macros/s/AKfycbzY0CuQFdIBOopTEKOlWyjKlCIJ5N0v4ifoZiU_wpaKUOcuFgY5oUO0WvXy5L0FuQbP6A/exec";
 
 let employeeName = "";
 let step = 0;
